# edge_sdk_examples

cpp/RoundTrip/: CMakeLists.txt
cpp/RoundTrip/config/: PingProperties.json
cpp/RoundTrip/src/: ping.cpp  pong.cpp
cpp/RoundTripProtobuf/: CMakeLists.txt
cpp/RoundTripProtobuf/config/: PingProperties.json  PongProperties.json
cpp/RoundTripProtobuf/definitions/: PingTagGroup.proto  PongTagGroup.proto
cpp/RoundTripProtobuf/src/: ping.cpp  pong.cpp
cpp/RoundTripProtobuf/src/include/: utilities.h
cpp/S1_ConnectSensorJsontgc/: CMakeLists.txt  start_sensor.sh
cpp/S1_ConnectSensorJsontgc/src/: TemperatureDisplay.cpp  TemperatureSensor.cpp
cpp/S1_ConnectSensorProtobuf/: CMakeLists.txt  start_display.sh  start_sensor.bat
cpp/S1_ConnectSensorProtobuf/config/: TemperatureDisplayProperties.json  TemperatureSensorProperties.json
cpp/S1_ConnectSensorProtobuf/definitions/: TemperatureTagGroup.proto
cpp/S1_ConnectSensorProtobuf/src/: TemperatureDisplay.cpp  TemperatureSensor.cpp
cpp/S2B_Dashboard/: CMakeLists.txt  start_sensor2.bat  start_sensor2.sh  start_sensor3.sh
cpp/S2_DashboardProtobuf/: CMakeLists.txt
cpp/S2_DashboardProtobuf/config/: TemperatureDashboardProperties.json  TemperatureSensor1Properties.json
cpp/S2_DashboardProtobuf/src/: TemperatureDashboard.cpp  TemperatureSensor.cpp
cpp/S3_DerivedValueJsontgc/: CMakeLists.txt  start_truck1.sh  start_truck2.bat
cpp/S3_DerivedValueJsontgc/config/: DashboardProperties.json  DistanceServiceProperties.json  GpsSensor1Properties.json
cpp/S3_DerivedValueJsontgc/definitions/: DistanceTagGroup.json  LocationTagGroup.json
cpp/S3_DerivedValueJsontgc/src/: Dashboard.cpp  DistanceService.cpp  GpsSensor.cpp
cpp/S3_DerivedValueProtobuf/: CMakeLists.txt  start_distanceservice.sh  start_truck1.bat  start_truck2.sh
cpp/S3_DerivedValueProtobuf/config/: DashboardProperties.json  DistanceServiceProperties.json  GpsSensor1Properties.json  GpsSensor2Properties.json
cpp/S3_DerivedValueProtobuf/definitions/: DistanceTagGroup.proto  LocationTagGroup.proto
cpp/S3_DerivedValueProtobuf/src/: Dashboard.cpp  DistanceService.cpp  GpsSensor.cpp
cpp/S4_GatewayService/: CMakeLists.txt  start_gatewayservice.bat  start_station1.bat  start_station1.sh  start_station2.bat  start_station2.sh
cpp/S4_GatewayService/config/: GatewayServiceProperties.json
cpp/S4_GatewayService/config/Station2/: Camera1Properties.json  Camera2Properties.json
cpp/S4_GatewayService/src/: Camera.cpp  GatewayService.cpp  LightSensor.cpp  Utils.cpp
cpp/S4_GatewayServiceProtobuf/: CMakeLists.txt  barcodes1.txt  start_gatewayservice.sh
cpp/S4_GatewayServiceProtobuf/config/: GatewayServiceProperties.json
cpp/S4_GatewayServiceProtobuf/definitions/: IlluminanceTagGroup.proto  ObservationTagGroup.proto
cpp/S4_GatewayServiceProtobuf/src/: Camera.cpp  GatewayService.cpp  LightSensor.cpp
cpp/S5_DynamicBrowsing/: CMakeLists.txt  start_generator_a.sh  start_generator_b.sh  start_thingbrowser.bat  start_thingbrowser.sh
cpp/S5_DynamicBrowsing/config/: ThingBrowserProperties.json
cpp/S5_DynamicBrowsing/src/: GeneratorA.cpp  GeneratorB.cpp  ThingBrowser.cpp
cpp/S5_DynamicBrowsing/src/Sensors/: FuelLevelSensor.cpp  (+2 more)
cpp/S5_DynamicBrowsingProtobuf/: CMakeLists.txt  start_generator_a.bat  start_generator_b.bat
cpp/S5_DynamicBrowsingProtobuf/config/: ThingBrowserProperties.json
cpp/S5_DynamicBrowsingProtobuf/definitions/: RotationalSpeedTagGroup.proto
cpp/S5_DynamicBrowsingProtobuf/src/: GeneratorA.cpp  GeneratorB.cpp  ThingBrowser.cpp  Utils.cpp
cpp/SecureDataRiver/: CMakeLists.txt  start_display.bat  start_display.sh  start_sensor.bat  start_sensor.sh
cpp/SecureDataRiver/src/: TemperatureDisplay.cpp  TemperatureSensor.cpp
cpp/ThingThroughputProtobuf/: CMakeLists.txt
cpp/ThingThroughputProtobuf/config/: ThroughputWriterProperties.json
cpp/ThingThroughputProtobuf/definitions/: ThroughputTagGroup.proto
cpp/ThingThroughputProtobuf/src/: ThroughputReader.cpp  ThroughputWriter.cpp
cpp/TypeEvolution/Gen3_Sensor_Dashboard/: CMakeLists.txt  start_dashboard.bat
java/S1_ConnectSensor/: CMakeLists.txt  start_display.bat  start_display.sh  start_sensor.bat  start_sensor.sh
java/S1_ConnectSensor/config/: TemperatureDisplayProperties.json  TemperatureSensorProperties.json
java/S1_ConnectSensor/src/: TemperatureDisplay.java  TemperatureDisplayLauncher.java  TemperatureSensor.java  TemperatureSensorLauncher.java
java/S3_DerivedValue/: CMakeLists.txt  start_dashboard.bat  start_dashboard.sh  start_distanceservice.bat  start_distanceservice.sh  start_truck1.bat  start_truck1.sh  start_truck2.bat  start_truck2.sh
java/S3_DerivedValue/config/: DashboardProperties.json  DistanceServiceProperties.json  GpsSensor1Properties.json  GpsSensor2Properties.json
java/S4_GatewayService/: CMakeLists.txt  Camera.MF  start_gatewayservice.bat  start_gatewayservice.sh  start_station1.bat  start_station1.sh  start_station2.bat  start_station2.sh
java/S4_GatewayService/config/: GatewayServiceProperties.json
java/S5_DynamicBrowsing/: CMakeLists.txt  start_generator_a.bat  start_generator_a.sh  start_generator_b.bat  start_generator_b.sh  start_thingbrowser.bat  start_thingbrowser.sh
java/S5_DynamicBrowsing/config/: ThingBrowserProperties.json
java/ThingThroughput/: CMakeLists.txt  classpath.txt.in
java/ThingThroughput/config/: ThroughputWriterProperties.json
python/RoundTripProtobuf/: CMakeLists.txt  ping.py  pong.py
python/RoundTripProtobuf/config/: PingProperties.json  PongProperties.json
python/RoundTripProtobuf/definitions/: PingTagGroup.proto  PongTagGroup.proto
python/TypeEvolution/: CMakeLists.txt  gen1_changes.md  gen2_changes.md  gen3_changes.md  run.cmake
python/TypeEvolution/Gen1_Sensor_Dashboard/: CMakeLists.txt  start_sensor.bat  temperature_dashboard.py
python/TypeEvolution/Gen2_Sensor_Dashboard/: start_sensor.bat  temperature_dashboard.py  temperature_sensor.py
python/TypeEvolution/Gen3_Sensor_Dashboard/: CMakeLists.txt  start_dashboard.bat  start_dashboard.sh  start_sensor.sh  temperature_dashboard.py  temperature_sensor.py
(+529 files in other folders)
